--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -342,12 +342,11 @@ body {
 }
 
 .about-section{
-    padding: 70px 0;
+    padding-top: 60px
 }
 
 .about-class{
-    width: 100%;
-    height: 100%;
+    width: 100%;    
     color: #fff;
     background: url(../img/about.JPG) no-repeat center center scroll;
     background-color: #000;
@@ -355,19 +354,6 @@ body {
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
-}
-
-#reroute {
-    display: table;
-    width: 100%;
-    height: auto;
-    padding: 100px 0;
-    background: url(../img/about-bg.jpg) no-repeat bottom center scroll;
-    webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
-
 }
 
 .contribute-section {    
@@ -412,4 +398,16 @@ body {
 .description{
     border-left: 1px #34495e solid;
     padding-left: 1em;    
+}
+
+#reroute {
+    display: table;
+    width: 100%;
+    height: auto;
+    padding: 100px 0;
+    background: url(../img/about-bg.jpg) no-repeat bottom center scroll;
+    webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
 }
